fix text size on mobile

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -23,7 +23,8 @@
     color #000
     font-size: 18px
     line-height: 1.5em
-    border 1px solid  #D4D4D4
+    text-size-adjust 100%
+    border 1px solid #D4D4D4
     box-sizing border-box
 
     background-color #fff
